# pred_atraso_vuelos

./: README.md  pyproject.toml
data/: clima_aeropuerto.xlsx  distancias.xlsx  res_feriados.csv
pred_atraso_vuelos/: prediccion_atraso_vuelos.ipynb  synthetic_features.csv
pred_atraso_vuelos/.ipynb_checkpoints/: prediccion_atraso_vuelos-checkpoint.ipynb
tests/: test_pred_atraso_vuelos.py
