[tool.poetry]
name = "pred_atraso_vuelos"
version = "0.1.0"
description = ""
authors = ["clcollao"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.23.3"
pandas = "^1.5.0"
jupyter = "^1.0.0"
seaborn = "^0.12.0"
matplotlib = "^3.6.0"
openpyxl = "^3.0.10"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
